--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
                             </ul>
                         </li>
                         <li><a href="blog.html">Blog</a></li>
+                        <h3 class="active">paztrana</h3>
                         <li><a href="contact-us.html">Contact</a></li>
                     </ul>
                 </div>
